# trexdetect

./: CMakeLists.txt
src/: KLTWrapper.cpp  KLTWrapper.hpp  MCDWrapper.cpp  MCDWrapper.hpp  main.cpp  main.hpp  params.hpp  prob_model.hpp
